
(foreign_library
  (archive_name cppcaml_test_stubs)
  (names test_stubs)
  (language cxx)
  (flags :standard -Wall -g -O1 -std=c++23 -fconcepts-diagnostics-depth=8)
  (include_dirs ../include)
  )

(library
  (name cppcaml_test_stubs)
  (modules)
  (foreign_archives
    cppcaml_test_stubs
    ../lib/apiinfo/cppcaml_apiinfo
  )
  (modes native)
  (libraries cppcaml_headers)
  (library_flags -linkall -cclib -Wl,-lstdc++)
  )

(cinaps
  (files test_ocaml.ml)
  (libraries core cppcaml_test_stubs cppcaml_gen)
  (link_flags :standard -linkall)
  )

(library
  (name test_ocaml)
  )
